--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,7 @@ button:hover {
     display: flex;
     margin-top: 20px;
     margin-left: 20px;
+    border-radius: 50px;
 }
 
 #seta-voltar button img{
@@ -149,6 +150,48 @@ button {
     margin: 5px 0;
 }
 
+/*editar doador e funcionario*/
 
+.container-edit-fun {
+    display: block;
+}
 
+body {
+    /*font-family: Arial, sans-serif;*/
+    text-align: center;
+    padding: 20px;
+}
 
+.row {
+    display: flex;
+    justify-content: space-between;
+}
+
+.coluna {
+    width: 40%;
+}
+
+label, input {
+    display: flex;
+    margin-bottom: 10px;
+}
+
+input {
+    width: 80%;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 20px;
+}
+
+button {
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #45a049;
+}
